@@ -7,13 +7,13 @@
 
          |-----handy-ruler------------------------------------------------------|
 slapt-get: slapt-get (APT like system for Slackware)
-slapt-get:
 slapt-get: slapt-get is an APT like system for Slackware package management.
 slapt-get: It allows one to search slackware mirrors and third party sources
 slapt-get: for packages, compare them with installed packages, install new
 slapt-get: packages, or upgrade all installed packages.
-slapt-get: 
+slapt-get:
 slapt-get: See /usr/doc/slapt-get-0.9.7a/ for complete documentation. 
 slapt-get:
-slapt-get: Please translate /usr/share/slapt-get/locales/slapt-get.pot !
+slapt-get: Please translate
+slapt-get: http://software.jaos.org/BUILD/slapt-get/po/slapt-get.pot
 slapt-get: 
